--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "export": "next export"
+    "export": "next export",
+    "deploy": "./deploy-quick.sh",
+    "deploy:standard": "./deploy.sh",
+    "deploy:advanced": "./deploy-advanced.sh"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
